...
                            <constraint firstAttribute="bottom" secondItem="bPQ-vh-q2b" secondAttribute="bottom" id="k3H-zR-9Iy"/>
                            <constraint firstItem="ZFq-Wz-l8C" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="mUW-4W-KoN"/>
                            <constraint firstItem="bPQ-vh-q2b" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="mkC-tS-5OW"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Venues" id="aXL-Ee-8LL">
                        <barButtonItem key="rightBarButtonItem" title="search" image="location.viewfinder" catalog="system" style="plain" id="1wN-T3-nKK">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <connections>
                                <action selector="loadData" destination="Y6W-OH-hqX" id="2aj-gQ-Cmv"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="collectionView" destination="bPQ-vh-q2b" id="8ch-xT-mXJ"/>
                        <outlet property="startSearchView" destination="ZFq-Wz-l8C" id="FAo-UP-fhI"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="728.98550724637687" y="97.767857142857139"/>
...
